--- a/tcn/ui/templates/docs/base.html
+++ b/tcn/ui/templates/docs/base.html
@@ -2,5 +2,5 @@
 
 <!---->
 {% block styles %}
-<link rel="stylesheet" href="{% static 'blog/css/styles.css' %}" />
+<link rel="stylesheet" href="{% static 'docs/css/styles.css' %}" />
 {{ block.super }}{% endblock %}
