Enhance blog and docs templates with titles and improve article components
- Updated base.html for blog and docs to include dynamic titles with translations.
- Modified article-1.html and article-2.html to add z-index to card actions for better layering.
- Adjusted visibility classes in article-2.html for improved responsiveness.

--- a/tcn/ui/templates/blog/base.html
+++ b/tcn/ui/templates/blog/base.html
@@ -1,6 +1,9 @@
 {% extends 'ui/base.html' %}{% load static %}
 
 <!---->
+{% block title %}{{ block.super }} | {% trans 'Blog' %}{% endblock %}
+
+<!---->
 {% block styles %}
 <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}" />
 {{ block.super }}{% endblock %}
