--- a/tcn/ui/templates/ui/components/article-1.html
+++ b/tcn/ui/templates/ui/components/article-1.html
@@ -22,7 +22,7 @@
 
     <p class="hidden grow-0 group-first:block">{{ article.headline }}</p>
 
-    <div class="card-actions items-center gap-1">
+    <div class="card-actions items-center gap-1 z-20">
       {% if article.is_breaking %}
       <div class="tooltip flex tooltip-error" data-tip="{% trans 'Breaking' %}">
         <div class="inline-grid *:[grid-area:1/1]">
