--- a/tcn/ui/templates/ui/contact.html
+++ b/tcn/ui/templates/ui/contact.html
@@ -7,10 +7,12 @@
 {% block content %}
 <section class="container mx-auto px-4 py-20">
   <div
-    class="mx-auto prose prose-sm md:processes-md prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full"
+    class="mx-auto prose prose-sm prose-video:rounded-box xl:prose-lg 2xl:prose-xl prose-headings:text-primary prose-headings:font-serif rtl:prose-headings:font-kufi prose-img:rounded-box prose-img:w-full"
   >
     <h1>{{ contact.title }}</h1>
     {{ contact.content }}
   </div>
+
+  {% include 'ui/components/form.html' %}
 </section>
 {% endblock %}
