load i18n in blog and docs base templates

--- a/tcn/ui/templates/blog/base.html
+++ b/tcn/ui/templates/blog/base.html
@@ -1,4 +1,4 @@
-{% extends 'ui/base.html' %}{% load static %}
+{% extends 'ui/base.html' %}{% load i18n static %}
 
 <!---->
 {% block title %}{{ block.super }} | {% trans 'Blog' %}{% endblock %}
